<resources>
    <string name="app_name">3seka</string>
    <string name="facebook_app_id">700391843711254</string>
    <string name="fb_login_protocol_scheme">fb700391843711254</string>
    <string name="google_maps_key">AIzaSyAluiqmBBsMrnJnpodYT7BPG_MYjZrihfE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addTripFragment_tripName">Trip Name</string>
    <string name="addTripFragment_startPoint">Start Point</string>
    <string name="addTripFragment_endPoint">End Point</string>
    <string name="addTripFragment_dateTrip">Return Date</string>
    <string name="addTripFragment_timeTrip">Return Time</string>
    <string name="addTripFragment__tripType">Trip Type</string>
    <string name="addTripFragment__addTrip">Add Trip</string>
    <string-array name="addTripFragment_spnTripType">
        <item>One Direction</item>
        <item>Round Direction</item>
    </string-array>
    <string name="title_activity_navigatin_drawer">NavigatinDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="up_coming">Up coming</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="login">LOGIN</string>
    <string name="email_gmail_com">Email@gmail.com</string>
    <string name="password">Password</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="register_now">Register now!</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date :</string>
    <string name="start">Start</string>
    <string name="time">Time :</string>
    <string name="add_note">Add Note</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="to">To :</string>
    <string name="from">From :</string>
    <string name="title">Title</string>
    <string name="showNote">Show Notes</string>
    <string name="note_title">Note Title</string>
    <string name="editTripFragment_update_trip">Update Trip</string>
    <string name="update_note">Update Note</string>
    <string name="renew">renew</string>
    <string name="google_key_display"><![CDATA[&key=AIzaSyC4X5tDaquLpuYFDXRsxYAxcl26I1E_KSs]]></string>
    <string name="delete_note">Delete Note</string>
    <string name="emty_trip">no trips available</string>
    <!--<string name="default_web_client_id">816442432158-advomqirbnaf93krfr8qhvkmg4snhf1m.apps.googleusercontent.com</string>-->
</resources>
