<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="iti.jets.tripplanner.NavigatinDrawerActivity">

    <RelativeLayout
        android:id="@+id/addTripFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="40dp">

            <LinearLayout
                android:id="@+id/linearContainer"
                style="@style/linearForm">

                <LinearLayout style="@style/linearForm">

                    <TextView
                        style="@style/labelField"
                        android:text="@string/addTripFragment_tripName" />

                    <EditText
                        android:id="@+id/editTripFragment_edtTripName"
                        style="@style/editText"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout style="@style/linearForm">

                    <TextView
                        style="@style/labelField"
                        android:text="@string/addTripFragment_startPoint" />

                    <fragment
                        android:id="@+id/editTripFragment_startPoint"
                        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout style="@style/linearForm">

                    <TextView
                        style="@style/labelField"
                        android:text="@string/addTripFragment_endPoint" />

                    <fragment
                        android:id="@+id/editTripFragment_entPoint"
                        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout style="@style/linearForm">

                    <TextView
                        style="@style/labelField"
                        android:text="@string/addTripFragment_dateTrip" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <EditText
                            android:id="@+id/editTripFragment_edtTripDate"
                            style="@style/editText"
                            android:layout_width="0dp"
                            android:layout_marginEnd="15dp"
                            android:layout_weight="3"
                            android:enabled="false"
                            android:inputType="date"
                            android:textAlignment="center"
                            tools:ignore="LabelFor" />

                        <ImageButton
                            android:id="@+id/editTripFragment_btnTripDate"
                            style="@style/editText"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:src="@drawable/ic_date_range_black_24dp"
                            android:text="Select" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout style="@style/linearForm">

                    <TextView
                        style="@style/labelField"
                        android:text="@string/addTripFragment_timeTrip" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <EditText
                            android:id="@+id/editTripFragment_edtTripTime"
                            style="@style/editText"
                            android:layout_width="0dp"
                            android:layout_marginEnd="15dp"
                            android:layout_weight="3"
                            android:enabled="false"
                            android:inputType="time"
                            android:textAlignment="center"
                            tools:ignore="LabelFor" />

                        <ImageButton
                            android:id="@+id/editTripFragment_btnTripTime"
                            style="@style/editText"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:src="@drawable/ic_access_time_black_24dp"
                            android:text="Select" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/linearForm">

                    <TextView
                        style="@style/labelField"
                        android:text="@string/addTripFragment__tripType" />

                    <Spinner
                        android:id="@+id/editTripFragment_spnTripType"
                        style="@style/spinner"
                        android:entries="@array/addTripFragment_spnTripType"
                        android:spinnerMode="dialog" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/editTripFragment_btnUpdateTrip"
                style="@style/styleButton"
                android:layout_below="@id/linearContainer"
                android:text="@string/editTripFragment_update_trip" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>