<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/historyTripItem_cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:elevation="5dp"
        android:orientation="vertical"
        card_view:cardBackgroundColor="@color/offWhite"
        card_view:cardCornerRadius="20dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/colorPrimary"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/historyTripItem_txtTripName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/title"
                android:textSize="25sp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/textView9" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/map"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/from" />

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                card_view:layout_constraintStart_toStartOf="@+id/historyTripItem_txtTripName"
                card_view:layout_constraintTop_toTopOf="@+id/historyTripItem_txtStartPoint" />

            <TextView
                android:id="@+id/historyTripItem_txtStartPoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/from"
                android:text="rwerwerlwekrkwehrkweljrklwerklweklrweklrwekljrwel"
                card_view:layout_constraintEnd_toStartOf="@+id/imageView2"
                card_view:layout_constraintStart_toEndOf="@+id/from"
                card_view:layout_constraintTop_toBottomOf="@+id/historyTripItem_txtTripName" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                card_view:layout_constraintStart_toStartOf="@+id/from"
                card_view:layout_constraintTop_toTopOf="@+id/historyTripItem_tripEndTxt" />

            <TextView
                android:id="@+id/historyTripItem_tripEndTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="rwerwerlwekrkwehrkweljrklwerklweklrweklrwekljrwel"
                card_view:layout_constraintEnd_toEndOf="@+id/historyTripItem_txtStartPoint"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="@+id/historyTripItem_txtStartPoint"
                card_view:layout_constraintTop_toBottomOf="@+id/historyTripItem_txtStartPoint" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                card_view:layout_constraintStart_toStartOf="@+id/to"
                card_view:layout_constraintTop_toTopOf="@+id/historyTripItem_txtDate" />

            <TextView
                android:id="@+id/historyTripItem_txtDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="j,hm.jlkhklhklhhkjhhjhjkhjkjhkjhlhjklhklhkl"
                card_view:layout_constraintEnd_toEndOf="@+id/historyTripItem_tripEndTxt"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="@+id/historyTripItem_tripEndTxt"
                card_view:layout_constraintTop_toBottomOf="@+id/historyTripItem_tripEndTxt" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                card_view:layout_constraintStart_toStartOf="@+id/duration"
                card_view:layout_constraintTop_toTopOf="@+id/historyTripItem_txtTime" />

            <TextView
                android:id="@+id/historyTripItem_txtTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="kl;jdf;lgid;fiyeriypoeriyoperoierpoitpoy"
                card_view:layout_constraintEnd_toEndOf="@+id/historyTripItem_txtDate"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="@+id/historyTripItem_txtDate"
                card_view:layout_constraintTop_toBottomOf="@+id/historyTripItem_txtDate" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                card_view:layout_constraintEnd_toEndOf="@+id/imageView2"
                card_view:layout_constraintStart_toStartOf="@+id/time"
                card_view:layout_constraintTop_toBottomOf="@+id/historyTripItem_txtTime">

                <Button
                    android:id="@+id/historyTripItem_btnRenew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/historyTripItem_btnShowNotes"
                    android:background="@color/offWhite"
                    android:text="@string/renew"
                    android:textColor="@color/colorPrimary"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintVertical_bias="1.0" />

                <Button
                    android:id="@+id/historyTripItem_btnShowNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/offWhite"
                    android:paddingRight="5dp"
                    android:text="@string/showNote"
                    android:textColor="@color/colorPrimary"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>